--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/work-sans": "^4.5.2",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "history": "^5.1.0",
