--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fontsource/work-sans": "^4.5.2",
+    "@formspree/react": "^2.2.4",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "history": "^5.1.0",
