--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fontsource/work-sans": "^4.5.2",
     "@formspree/react": "^2.2.4",
     "@testing-library/user-event": "^12.8.3",
+    "avataaars": "^2.0.0",
     "bootstrap": "^5.1.3",
     "history": "^5.1.0",
     "react": "^17.0.2",
