--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-fade-in": "^2.0.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
